# plickers-python

./: .editorconfig  .env.example  .gitignore  MANIFEST.in  Makefile  PLICKERS_GUIDE.txt  README.md  card.list  card_read.py  detector.py  ket_qua.csv  pyproject.toml  rectangle.py  requirements-dev.txt  requirements.txt  run_scanner.py  run_web.py  setup.bat  setup.ps1  test_all.py
.github/workflows/: ci.yml
data/: class.json  questions.json
data/database/: card.data  card.list
data/database_official/: card.data  card.list
data/database_official_final/: card.data  card.list
data/output/: ket_qua.csv
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: Login.tsx  Register.tsx  StudentDisplay.tsx  TeacherDashboard.tsx
src/: app.py  config.py
src/application/services/: auth_service.py  data_service.py  scanner_service.py
src/core/: db.py  detector.py  utils.py
src/domain/: models.py
src/infrastructure/: database.py
src/infrastructure/repositories/: class_repository.py  question_repository.py  scan_repository.py  student_repository.py  user_repository.py
src/infrastructure/services/: detector.py
src/presentation/web/: __init__.py  app.py  extensions.py
src/presentation/web/routes/: auth_routes.py  data_routes.py  scanner_routes.py
src/presentation/web/services/: camera_service.py
src/scripts/: __init__.py  evaluate.py  extract_by_position.py  extract_from_official_pdf.py  generate_clean_plickers.py  generate_db.py  generate_pdf.py  generate_plickers_cards.py  generate_plickers_pdf.py  generate_premium_plickers.py  generate_sample_images.py  generate_single_card.py  improved_extract.py  test_official_cards.py  test_official_cards_final.py
src/web/: app_web.py  extensions.py
src/web/services/: camera_service.py  data_service.py  state.py
src/web/templates/: display.html  forgot_password.html  login.html  register.html  reset_password.html  teacher.html
tests/: test_plickers.py
